--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       # cannot accept .sln(f) files as arguments.
       # Build just the main game for now.
       - name: Build
-        run: msbuild osu.iOS/osu.iOS.csproj /restore /p:Configuration=Debug,Platform=iPhone
+        run: msbuild osu.iOS/osu.iOS.csproj /restore /p:BuildIpa=True /p:Configuration=Release,Platform=iPhone
 
       - name: upload stuff idk
         uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
-          name: osu-ios-build-smothing
-          path: osu.iOS/
+          name: osu-ios-build-${ github.ref }
+          path: osu.iOS/bin
