only upload ipa

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         if: ${{ always() }}
         with:
           name: osu-ios-build-${{ github.ref_name }}
-          path: osu.iOS/bin
+          path: osu.iOS/bin/iPhone/Release/*.ipa
