--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: dotnet workload install maui-ios
 
       - name: Build
-        run: dotnet build -c Release osu.iOS
+        run: dotnet publish -c Release osu.iOS
       
       - name: upload stuff idk
         uses: actions/upload-artifact@v2
